# VierOpRij

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.txt  Resource.h  VierOpRij.cpp  VierOpRij.h  VierOpRij.rc  VierOpRij.sln  VierOpRij.vcproj  VierOpRij.vcxproj  VierOpRij.vcxproj.filters  VierOpRijConsole.cpp  VierOpRijDlg.cpp  VierOpRijDlg.h  VierOpRijVeld.cpp  VierOpRijVeld.h  VierOpRijViewWnd.cpp  VierOpRijViewWnd.h  stdafx.cpp  stdafx.h
VierOpRijConsole/: ReadMe.txt  VierOpRijConsole.cpp  VierOpRijConsole.sln  VierOpRijConsole.vcproj  VierOpRijConsole.vcxproj  VierOpRijConsole.vcxproj.filters  stdafx.cpp  stdafx.h
res/: VierOpRij.rc2
